--- a/packages/atoms/base-gtk/dev-lang-78/spidermonkey/definition.yaml
+++ b/packages/atoms/base-gtk/dev-lang-78/spidermonkey/definition.yaml
@@ -1,10 +1,10 @@
 name: spidermonkey
-version: 78.15.0+1
+version: 78.15.0+2
 category: dev-lang-78
 use_flags:
-- -clang
 - -lto
 - -test
+- clang
 requires:
 - name: nspr
   version: '>=0'
