--- a/packages/atoms/base-gtk/dev-lang-78/spidermonkey/build.yaml
+++ b/packages/atoms/base-gtk/dev-lang-78/spidermonkey/build.yaml
@@ -1,7 +1,7 @@
 prelude:
 # Temporary patch the ebuild to using LLVM 13
 - >-
-  sed -e 's|^LLVM_MAX_SLOT=.|LLVM_MAX_SLOT=13|g'
+  sed -e 's|^LLVM_MAX_SLOT=.*|LLVM_MAX_SLOT=13|g'
   -e 's|sys-devel/llvm:12|sys-devel/llvm:13|g'
   -e 's|sys-devel/clang:12|sys-devel/clang:13|g' -i
   /var/git/meta-repo/kits/browser-kit/dev-lang/spidermonkey/spidermonkey-78.15.0-r1.ebuild
