--- a/packages/atoms/base-gtk/net-libs/libpsl/definition.yaml
+++ b/packages/atoms/base-gtk/net-libs/libpsl/definition.yaml
@@ -1,17 +1,26 @@
 name: libpsl
-version: 0.20.2
+version: 0.20.2+1
 category: net-libs
 use_flags:
 - -doc
-- -icu
 - -idn
 - -idn2
 - -man
 - -python_single_target_python3_10
 - -python_single_target_python3_7
 - -python_single_target_python3_8
-- -python_single_target_python3_9
+- icu
+- python_single_target_python3_9
 requires:
+- name: python
+  version: '>=0'
+  category: dev-lang-3.9
+- name: python-exec
+  version: '>=0'
+  category: dev-lang-2
+- name: icu
+  version: '>=0'
+  category: dev-libs
 - name: gettext
   version: '>=0'
   category: sys-devel
