--- a/packages/atoms/base-gtk/sys-auth/elogind/build.yaml
+++ b/packages/atoms/base-gtk/sys-auth/elogind/build.yaml
@@ -1,11 +1,8 @@
 prelude:
-# elogid has a build cycle with dbus that need elogin too. So, I just force
-# building of dbus without elogind and avoid to inject consolekit when the
-# polkit[elogind] is not set. Really, I hate cross referenced packages.
+# Add polkit[elogind] uses config to avoid consolekit injection.
 - >-
   eval 'mkdir -p /etc/portage/package.use || true' &&
-  echo "sys-auth/polkit elogind" > /etc/portage/package.use/00-elogind-macaroni.use &&
-  USE="X" emerge sys-apps/dbus -t -j
+  echo "sys-auth/polkit elogind" > /etc/portage/package.use/00-elogind-macaroni.use
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
