portage-converter/base-python.yml: Fix uses of virtual/libusb

--- a/portage-converter/base-python.yml
+++ b/portage-converter/base-python.yml
@@ -515,6 +515,8 @@ artefacts:
 
 - tree: packages/atoms/base-python
   mutations:
+    uses:
+      - udev
     buildtime_deps:
       packages:
         - category: dev-libs-1
@@ -523,6 +525,7 @@ artefacts:
     disabled:
     - nios2
     - sh
+    - udev
   packages:
     - virtual/libusb:1
 
