Dockerfile.dev: Using new options from luet v0.39.0

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -10,12 +10,14 @@ ENV USER=root
 
 RUN [ \
   "/usr/bin/luet", "install", "-y", "--force", "--sync-repos", \
+  "--cleanup", "--purge-repos", \
   "repository/mottainai-stable", \
   "repository/macaroni-commons-dev", \
   "repository/macaroni-terragon-dev"]
 
 RUN [ \
   "/usr/bin/luet", "install", "-y", "--force", "--sync-repos", \
+  "--cleanup", "--purge-repos", \
   "--skip-config-protect", \
   "system/entities", \
   "system/luet-geaaru-thin", \
@@ -33,8 +35,7 @@ RUN [ \
 SHELL ["/bin/bash", "-c"]
 
 RUN macaronictl env-update && \
-  luet rm -y --nodeps virtual-entities/base && \
-  luet cleanup --purge-repos
+  luet rm -y --nodeps virtual-entities/base
 
 ENV TMPDIR=/tmp
 ENTRYPOINT ["/bin/bash"]
