gnome-base/dconf: Bump v.0.36.0+2

--- a/packages/atoms/base-gtk2/gnome-base/dconf/build.yaml
+++ b/packages/atoms/base-gtk2/gnome-base/dconf/build.yaml
@@ -1,4 +1,7 @@
 prelude:
+# Temporary fix until the patch will be available on the tree
+- >-
+  sed -i -e 's|0.50|0.54|g'  /var/git/meta-repo/kits/core-kit/eclass/vala.eclass
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
