portage-converter/fonts.yml: Add new fonts

--- a/portage-converter/fonts.yml
+++ b/portage-converter/fonts.yml
@@ -200,6 +200,12 @@ artefacts:
 
   - x11-apps/mkfontdir
 
+  - media-fonts/noto
+  # Postponed on next race because
+  # requires dependencies available on base-xorg2.
+  #- media-fonts/noto-emoji
+  - media-fonts/hack
+
 include_layers:
 - layers/macaroni-funtoo-race5.yaml
 
