--- a/packages/seeds/funtoo-kits/build.yaml
+++ b/packages/seeds/funtoo-kits/build.yaml
@@ -46,5 +46,8 @@ prelude:
 #  sed '/meson/d' -i
 #  /var/git/meta-repo/kits/core-kit/profiles/package.mask/01-funtoo
 
+# Permit using vala 0.54
+- sed -i -e 's|0.50|0.54|g'  /var/git/meta-repo/kits/core-kit/eclass/vala.eclass
+
 # Drop package.mask with elogind use flag for x11-misc/sddm
 - rm /var/git/meta-repo/kits/core-kit/profiles/funtoo/1.0/linux-gnu/flavor/workstation/package.use.mask
