base-gtk2: Review build order

--- a/packages/atoms/base-gtk2/dev-libs/snowball-stemmer/build.yaml
+++ b/packages/atoms/base-gtk2/dev-libs/snowball-stemmer/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: gcab
+- name: libyaml
   version: '>=0'
-  category: app-arch
+  category: dev-libs
