--- a/packages/atoms/base-gtk2/x11-libs-3/gtk+/build.yaml
+++ b/packages/atoms/base-gtk2/x11-libs-3/gtk+/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: snowball-stemmer
+- name: libevent
   version: '>=0'
   category: dev-libs
