--- a/packages/atoms/base-gtk2/app-arch/gcab/build.yaml
+++ b/packages/atoms/base-gtk2/app-arch/gcab/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libyaml
+- name: snowball-stemmer
   version: '>=0'
   category: dev-libs
