media-fonts/noto-emoji: Bump v.20230310+1

--- a/packages/atoms/base-gtk2/media-fonts/noto-emoji/definition.yaml
+++ b/packages/atoms/base-gtk2/media-fonts/noto-emoji/definition.yaml
@@ -1,9 +1,9 @@
 name: noto-emoji
-version: "20230310"
+version: 20230310+1
 category: media-fonts
 use_flags:
+- -buildfont
 - X
-- buildfont
 annotations:
   subsets:
     rules:
