toolchain/fonts: Update rdeps

--- a/packages/toolchain/fonts/definition.yaml
+++ b/packages/toolchain/fonts/definition.yaml
@@ -156,6 +156,9 @@ requires:
   - name: fs-fonts
     category: media-fonts
     version: '>=0'
+  - name: hack
+    category: media-fonts
+    version: '>=0'
   - name: hunkyfonts
     category: media-fonts
     version: '>=0'
@@ -181,6 +184,12 @@ requires:
     category: media-fonts
     version: '>=0'
   - name: nepali-fonts
+    category: media-fonts
+    version: '>=0'
+  - name: noto
+    category: media-fonts
+    version: '>=0'
+  - name: noto-cjk
     category: media-fonts
     version: '>=0'
   - name: proggy-fonts
