--- a/packages/seeds/funtoo-base/pkglist/build.yaml
+++ b/packages/seeds/funtoo-base/pkglist/build.yaml
@@ -12,5 +12,5 @@ steps:
   qlist -ICSv > /{{ .Values.name }}/usr/share/macaroni/layers/{{ .Values.name }}/pkgslist &&
   pkgs-checker portage gen-pkgs-uses  --filter-opts /usr/share/pkgs-checker/gen-uses-filter.yaml
   --luet-portage-converter-format
-  --treePath atoms/base > /{{ .Values.name }}/usr/share/macaroni/layers/{{ .Values.name }}/portage-converter.yml
+  --treePath packages/atoms/base > /{{ .Values.name }}/usr/share/macaroni/layers/{{ .Values.name }}/portage-converter.yml
 
