dev-libs/libpcre2: Bump v.10.35+2

--- a/packages/atoms/base/dev-libs/libpcre2/definition.yaml
+++ b/packages/atoms/base/dev-libs/libpcre2/definition.yaml
@@ -1,5 +1,5 @@
 name: libpcre2
-version: 10.35+1
+version: 10.35+2
 category: dev-libs
 use_flags:
 - -libedit
@@ -7,6 +7,11 @@ use_flags:
 - bzip2
 - readline
 - zlib
+- jit
+- pcre16
+- pcre32
+- recursion-limit
+- unicode
 requires:
 - name: bzip2
   version: '>=0'
