app-editors/vim: Bump v.9.0.1677+1

--- a/packages/atoms/base-editors/app-editors/vim/definition.yaml
+++ b/packages/atoms/base-editors/app-editors/vim/definition.yaml
@@ -1,5 +1,5 @@
 name: vim
-version: 9.0.1677
+version: 9.0.1677+1
 category: app-editors
 use_flags:
 - -kernel_linux
@@ -14,7 +14,6 @@ use_flags:
 - -python_single_target_python3_10
 - -python_single_target_python3_7
 - -python_single_target_python3_8
-- -python_single_target_python3_9
 - -racket
 - -ruby
 - -selinux
@@ -28,6 +27,7 @@ use_flags:
 - gpm
 - nls
 - python
+- python_single_target_python3_9
 requires:
 - name: vim-core
   version: '>=0'
@@ -35,6 +35,12 @@ requires:
 - name: eselect-vi
   version: '>=0'
   category: app-eselect
+- name: python
+  version: '>=0'
+  category: dev-lang-3.9
+- name: python-exec
+  version: '>=0'
+  category: dev-lang-2
 - name: libsodium
   version: '>=0'
   category: dev-libs
