portage-converter/base-editors.yml: Fix vim use flags

--- a/portage-converter/base-editors.yml
+++ b/portage-converter/base-editors.yml
@@ -139,6 +139,7 @@ artefacts:
     - nls
     - python
     - python_targets_python3_9
+    - python_single_target_python3_9
   packages:
   - app-editors/vim
 
