sys-apps/portage: Update finalize and rdeps

--- a/packages/atoms/base/sys-apps/portage/definition.yaml
+++ b/packages/atoms/base/sys-apps/portage/definition.yaml
@@ -48,6 +48,9 @@ requires:
 - name: tmpfiles
   version: '>=0'
   category: virtual
+- name: entities-catalog
+  version: '>=0'
+  category: macaroni
 annotations:
   subsets:
     rules:
