--- a/packages/atoms/base/sys-apps/portage/finalize.yaml
+++ b/packages/atoms/base/sys-apps/portage/finalize.yaml
@@ -2,4 +2,5 @@ shell:
 - /bin/bash
 - -c
 install:
-- entities merge --specs-dir /usr/share/macaroni/entities/ -e portage
+- eval 'mkdir -p /var/tmp/portage || true' && entities merge --specs-dir /usr/share/macaroni/entities/
+  -e portage && eval 'chown portage:portage /var/tmp/portage -R || true'
