portage-converter/fonts.yml: Add symbola

--- a/portage-converter/fonts.yml
+++ b/portage-converter/fonts.yml
@@ -206,6 +206,17 @@ artefacts:
   #- media-fonts/noto-emoji
   - media-fonts/hack
 
+- tree: packages/atoms/fonts
+  uses:
+    disabled:
+    - doc
+    - nios2
+    - sh
+    enabled:
+    - X
+  packages:
+  - media-fonts/symbola
+
 include_layers:
 - layers/macaroni-funtoo-race5.yaml
 
