--- a/packages/atoms/xorg-base/dev-cpp/cairomm/definition.yaml
+++ b/packages/atoms/xorg-base/dev-cpp/cairomm/definition.yaml
@@ -1,15 +1,16 @@
 name: cairomm
-version: 1.12.2
+version: 1.12.2+1
 category: dev-cpp
 use_flags:
 - -doc
+- X
 requires:
-- name: libsigc++
-  version: '>=0'
-  category: dev-libs-2
 - name: cairo
   version: '>=0'
   category: x11-libs
+- name: libsigc++
+  version: '>=0'
+  category: dev-libs-3
 annotations:
   subsets:
     rules:
