portage-converter/xorg-base.yml: Add libsigc++:2

--- a/portage-converter/xorg-base.yml
+++ b/portage-converter/xorg-base.yml
@@ -270,6 +270,7 @@ artefacts:
   # Needed for qt stuff
   - dev-libs/double-conversion
 
+  - dev-libs/libsigc++:2
   - dev-libs/libsigc++:3
 
 - tree: packages/atoms/xorg-base
