media-libs-1.0/clutter: Bump v.1.26.4+1

--- a/packages/atoms/xorg-base/media-libs-1.0/clutter/definition.yaml
+++ b/packages/atoms/xorg-base/media-libs-1.0/clutter/definition.yaml
@@ -1,15 +1,15 @@
 name: clutter
-version: 1.26.4
+version: 1.26.4+1
 category: media-libs-1.0
 use_flags:
 - -doc
 - -prefix
 - -test
-- -wayland
 - X
 - egl
 - gtk
 - introspection
+- wayland
 requires:
 - name: atk
   version: '>=0'
