media-libs/clutter-gtk: Fix use flags

--- a/packages/atoms/xorg-base/media-libs-1.0/clutter-gtk/definition.yaml
+++ b/packages/atoms/xorg-base/media-libs-1.0/clutter-gtk/definition.yaml
@@ -3,7 +3,13 @@ version: 1.8.4+1
 category: media-libs-1.0
 use_flags:
 - introspection
+- wayland
+- X
+- gtk
 requires:
+- name: gobject-introspection
+  version: '>=0'
+  category: dev-libs
 - name: clutter
   version: '>=0'
   category: media-libs-1.0
