toolchain/fonts: Update rdeps

--- a/packages/toolchain/fonts/definition.yaml
+++ b/packages/toolchain/fonts/definition.yaml
@@ -201,6 +201,9 @@ requires:
   - name: stix-fonts
     category: media-fonts
     version: '>=0'
+  - name: symbola
+    category: media-fonts
+    version: '>=0'
   - name: takao-fonts
     category: media-fonts
     version: '>=0'
