--- a/packages/atoms/base-net/net-wireless/wpa_supplicant/build.yaml
+++ b/packages/atoms/base-net/net-wireless/wpa_supplicant/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race8
+- name: pcsc-lite
   version: '>=0'
-  category: seed
+  category: sys-apps
