--- a/packages/atoms/base-net/sys-apps/pcsc-lite/build.yaml
+++ b/packages/atoms/base-net/sys-apps/pcsc-lite/build.yaml
@@ -1,4 +1,6 @@
 prelude:
+- >-
+  whip h perl.postinst
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
