toolchain/xorg-base: Update rdeps

--- a/packages/toolchain/xorg-base/definition.yaml
+++ b/packages/toolchain/xorg-base/definition.yaml
@@ -3,3 +3,309 @@ name: xorg-base
 version: "1"
 description: "Virtul package to install portage meta data of the xorg-base packages"
 requires:
+  - name: gcr
+    category: app-crypt
+    version: '>=0'
+  - name: eselect-notify-send
+    category: app-eselect
+    version: '>=0'
+  - name: docbook-xsl-ns-stylesheets
+    category: app-text
+    version: '>=0'
+  - name: rarian
+    category: app-text
+    version: '>=0'
+  - name: cairomm
+    category: dev-cpp
+    version: '>=0'
+  - name: libsigc++
+    category: dev-libs-2
+    version: '>=0'
+  - name: libsigc++
+    category: dev-libs-3
+    version: '>=0'
+  - name: dbus-glib
+    category: dev-libs
+    version: '>=0'
+  - name: double-conversion
+    category: dev-libs
+    version: '>=0'
+  - name: libevdev
+    category: dev-libs
+    version: '>=0'
+  - name: libinput
+    category: dev-libs
+    version: '>=0'
+  - name: libwacom
+    category: dev-libs
+    version: '>=0'
+  - name: tinyxml
+    category: dev-libs
+    version: '>=0'
+  - name: vulkan-headers
+    category: dev-util
+    version: '>=0'
+  - name: fontforge
+    category: media-gfx
+    version: '>=0'
+  - name: clutter
+    category: media-libs-1.0
+    version: '>=0'
+  - name: clutter-gtk
+    category: media-libs-1.0
+    version: '>=0'
+  - name: cogl
+    category: media-libs-1.0
+    version: '>=0'
+  - name: libuninameslist
+    category: media-libs
+    version: '>=0'
+  - name: vulkan-loader
+    category: media-libs
+    version: '>=0'
+  - name: libutempter
+    category: sys-libs
+    version: '>=0'
+  - name: mtdev
+    category: sys-libs
+    version: '>=0'
+  - name: appres
+    category: x11-apps
+    version: '>=0'
+  - name: bitmap
+    category: x11-apps
+    version: '>=0'
+  - name: iceauth
+    category: x11-apps
+    version: '>=0'
+  - name: luit
+    category: x11-apps
+    version: '>=0'
+  - name: mesa-progs
+    category: x11-apps
+    version: '>=0'
+  - name: rgb
+    category: x11-apps
+    version: '>=0'
+  - name: sessreg
+    category: x11-apps
+    version: '>=0'
+  - name: setxkbmap
+    category: x11-apps
+    version: '>=0'
+  - name: smproxy
+    category: x11-apps
+    version: '>=0'
+  - name: x11perf
+    category: x11-apps
+    version: '>=0'
+  - name: xauth
+    category: x11-apps
+    version: '>=0'
+  - name: xbacklight
+    category: x11-apps
+    version: '>=0'
+  - name: xclock
+    category: x11-apps
+    version: '>=0'
+  - name: xcmsdb
+    category: x11-apps
+    version: '>=0'
+  - name: xcursorgen
+    category: x11-apps
+    version: '>=0'
+  - name: xdpyinfo
+    category: x11-apps
+    version: '>=0'
+  - name: xdriinfo
+    category: x11-apps
+    version: '>=0'
+  - name: xev
+    category: x11-apps
+    version: '>=0'
+  - name: xf86dga
+    category: x11-apps
+    version: '>=0'
+  - name: xgamma
+    category: x11-apps
+    version: '>=0'
+  - name: xhost
+    category: x11-apps
+    version: '>=0'
+  - name: xinit
+    category: x11-apps
+    version: '>=0'
+  - name: xinput
+    category: x11-apps
+    version: '>=0'
+  - name: xkbcomp
+    category: x11-apps
+    version: '>=0'
+  - name: xkbevd
+    category: x11-apps
+    version: '>=0'
+  - name: xkbutils
+    category: x11-apps
+    version: '>=0'
+  - name: xkill
+    category: x11-apps
+    version: '>=0'
+  - name: xlsatoms
+    category: x11-apps
+    version: '>=0'
+  - name: xlsclients
+    category: x11-apps
+    version: '>=0'
+  - name: xmessage
+    category: x11-apps
+    version: '>=0'
+  - name: xmodmap
+    category: x11-apps
+    version: '>=0'
+  - name: xpr
+    category: x11-apps
+    version: '>=0'
+  - name: xrandr
+    category: x11-apps
+    version: '>=0'
+  - name: xrdb
+    category: x11-apps
+    version: '>=0'
+  - name: xrefresh
+    category: x11-apps
+    version: '>=0'
+  - name: xsetroot
+    category: x11-apps
+    version: '>=0'
+  - name: xvinfo
+    category: x11-apps
+    version: '>=0'
+  - name: xwd
+    category: x11-apps
+    version: '>=0'
+  - name: xwininfo
+    category: x11-apps
+    version: '>=0'
+  - name: xwud
+    category: x11-apps
+    version: '>=0'
+  - name: xorg-drivers
+    category: x11-base
+    version: '>=0'
+  - name: xorg-server
+    category: x11-base
+    version: '>=0'
+  - name: xf86-input-evdev
+    category: x11-drivers
+    version: '>=0'
+  - name: xf86-input-libinput
+    category: x11-drivers
+    version: '>=0'
+  - name: xf86-input-mouse
+    category: x11-drivers
+    version: '>=0'
+  - name: xf86-input-synaptics
+    category: x11-drivers
+    version: '>=0'
+  - name: xf86-input-vmmouse
+    category: x11-drivers
+    version: '>=0'
+  - name: xf86-input-wacom
+    category: x11-drivers
+    version: '>=0'
+  - name: xf86-video-amdgpu
+    category: x11-drivers
+    version: '>=0'
+  - name: xf86-video-ati
+    category: x11-drivers
+    version: '>=0'
+  - name: xf86-video-fbdev
+    category: x11-drivers
+    version: '>=0'
+  - name: xf86-video-nouveau
+    category: x11-drivers
+    version: '>=0'
+  - name: xf86-video-vbox
+    category: x11-drivers
+    version: '>=0'
+  - name: xf86-video-vesa
+    category: x11-drivers
+    version: '>=0'
+  - name: xf86-video-vmware
+    category: x11-drivers
+    version: '>=0'
+  - name: libXfont2
+    category: x11-libs
+    version: '>=0'
+  - name: libXpresent
+    category: x11-libs
+    version: '>=0'
+  - name: libXres
+    category: x11-libs
+    version: '>=0'
+  - name: libXxf86dga
+    category: x11-libs
+    version: '>=0'
+  - name: libXxf86misc
+    category: x11-libs
+    version: '>=0'
+  - name: libcryptui
+    category: x11-libs
+    version: '>=0'
+  - name: libdmx
+    category: x11-libs
+    version: '>=0'
+  - name: libnotify
+    category: x11-libs
+    version: '>=0'
+  - name: libxkbfile
+    category: x11-libs
+    version: '>=0'
+  - name: xcb-util
+    category: x11-libs
+    version: '>=0'
+  - name: xcb-util-cursor
+    category: x11-libs
+    version: '>=0'
+  - name: xcb-util-image
+    category: x11-libs
+    version: '>=0'
+  - name: xcb-util-keysyms
+    category: x11-libs
+    version: '>=0'
+  - name: xcb-util-renderutil
+    category: x11-libs
+    version: '>=0'
+  - name: xcb-util-wm
+    category: x11-libs
+    version: '>=0'
+  - name: util-macros
+    category: x11-misc
+    version: '>=0'
+  - name: xbitmaps
+    category: x11-misc
+    version: '>=0'
+  - name: xdg-user-dirs
+    category: x11-misc
+    version: '>=0'
+  - name: xdg-user-dirs-gtk
+    category: x11-misc
+    version: '>=0'
+  - name: xkeyboard-config
+    category: x11-misc
+    version: '>=0'
+  - name: xorg-cf-files
+    category: x11-misc
+    version: '>=0'
+  - name: xterm
+    category: x11-terms
+    version: '>=0'
+  - name: sound-theme-freedesktop
+    category: x11-themes
+    version: '>=0'
+  - name: xcursor-themes
+    category: x11-themes
+    version: '>=0'
+  - name: twm
+    category: x11-wm
+    version: '>=0'
