--- a/packages/atoms/base-net/sys-libs/talloc/definition.yaml
+++ b/packages/atoms/base-net/sys-libs/talloc/definition.yaml
@@ -1,16 +1,22 @@
 name: talloc
-version: 2.3.1
+version: 2.3.1+1
 category: sys-libs
 use_flags:
 - -elibc_Darwin
 - -elibc_FreeBSD
 - -elibc_SunOS
-- -python
 - -python_single_target_python3_10
 - -python_single_target_python3_7
 - -python_single_target_python3_8
-- -python_single_target_python3_9
+- python
+- python_single_target_python3_9
 requires:
+- name: python
+  version: '>=0'
+  category: dev-lang-3.9
+- name: python-exec
+  version: '>=0'
+  category: dev-lang-2
 - name: libbsd
   version: '>=0'
   category: dev-libs
