sys-apps/pcsc-lite: Review build order

--- a/packages/atoms/base-net/sys-apps/pcsc-lite/build.yaml
+++ b/packages/atoms/base-net/sys-apps/pcsc-lite/build.yaml
@@ -26,6 +26,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race8
+- name: crda
   version: '>=0'
-  category: seed
+  category: net-wireless
