--- a/packages/atoms/base-net/dev-libs-3/libnl/definition.yaml
+++ b/packages/atoms/base-net/dev-libs-3/libnl/definition.yaml
@@ -1,13 +1,20 @@
 name: libnl
-version: 3.4.0
+version: 3.4.0+1
 category: dev-libs-3
 use_flags:
-- -python
 - -python_targets_python2_7
 - -python_targets_python3_10
 - -python_targets_python3_7
 - -python_targets_python3_8
-- -python_targets_python3_9
+- python
+- python_targets_python3_9
+requires:
+- name: python
+  version: '>=0'
+  category: dev-lang-3.9
+- name: python-exec
+  version: '>=0'
+  category: dev-lang-2
 annotations:
   subsets:
     rules:
