www-servers-2/apache: Bump v.2.4.46+4

--- a/packages/atoms/base-net/www-servers-2/apache/definition.yaml
+++ b/packages/atoms/base-net/www-servers-2/apache/definition.yaml
@@ -1,5 +1,5 @@
 name: apache
-version: 2.4.46+3
+version: 2.4.46+4
 category: www-servers-2
 use_flags:
 - -apache2_modules_brotli
@@ -94,9 +94,6 @@ requires:
 - name: perl
   version: '>=0'
   category: dev-lang
-- name: apr
-  version: '>=0'
-  category: dev-libs-1
 - name: libpcre
   version: '>=0'
   category: dev-libs-3
@@ -109,6 +106,9 @@ requires:
 - name: entities-catalog
   version: '>=0'
   category: macaroni
+- name: apr-util
+  version: '>=0'
+  category: dev-libs-1
 annotations:
   subsets:
     rules:
