--- a/packages/atoms/base-net/www-servers-2/apache/build.yaml
+++ b/packages/atoms/base-net/www-servers-2/apache/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: apr
+- name: apr-util
   version: '>=0'
   category: dev-libs-1
