--- a/packages/atoms/base-net/net-analyzer/tcpdump/build.yaml
+++ b/packages/atoms/base-net/net-analyzer/tcpdump/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race8
+- name: libdnet
   version: '>=0'
-  category: seed
+  category: dev-libs
