--- a/packages/atoms/base-net/app-text/asciidoc/definition.yaml
+++ b/packages/atoms/base-net/app-text/asciidoc/definition.yaml
@@ -1,11 +1,11 @@
 name: asciidoc
-version: 10.2.0
+version: 10.2.0+1
 category: app-text
 use_flags:
 - -python_targets_python3_10
 - -python_targets_python3_7
 - -python_targets_python3_8
-- -python_targets_python3_9
+- python_targets_python3_9
 requires:
 - name: docbook-xml-dtd
   version: '>=0'
@@ -13,6 +13,9 @@ requires:
 - name: docbook-xsl-stylesheets
   version: '>=0'
   category: app-text
+- name: python
+  version: '>=0'
+  category: dev-lang-3.9
 - name: python-exec
   version: '>=0'
   category: dev-lang-2
