net-analyzer/net-snmp: Bump v.5.9+1

--- a/packages/atoms/base-net/net-analyzer/net-snmp/definition.yaml
+++ b/packages/atoms/base-net/net-analyzer/net-snmp/definition.yaml
@@ -1,5 +1,5 @@
 name: net-snmp
-version: "5.9"
+version: 5.9+1
 category: net-analyzer
 use_flags:
 - -X
@@ -16,11 +16,11 @@ use_flags:
 - -python_single_target_python3_10
 - -python_single_target_python3_7
 - -python_single_target_python3_8
-- -python_single_target_python3_9
 - -rpm
 - -selinux
 - bzip2
 - perl
+- python_single_target_python3_9
 - ssl
 - tcpd
 - zlib
