--- a/packages/atoms/base-net/net-libs/libnetfilter_conntrack/build.yaml
+++ b/packages/atoms/base-net/net-libs/libnetfilter_conntrack/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libical
+- name: libnetfilter_queue
   version: '>=0'
-  category: dev-libs
+  category: net-libs
