--- a/packages/atoms/base-lang/dev-lua/LuaBitOp/build.yaml
+++ b/packages/atoms/base-lang/dev-lua/LuaBitOp/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race8
+- name: lua
   version: '>=0'
-  category: seed
+  category: dev-lang
