--- a/packages/atoms/base-net/app-text/asciidoc/build.yaml
+++ b/packages/atoms/base-net/app-text/asciidoc/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race8
+- name: ruby
   version: '>=0'
-  category: seed
+  category: dev-lang-3.1
