net-libs/nodejs: Update bdeps

--- a/packages/atoms/base-lang/net-libs/nodejs/build.yaml
+++ b/packages/atoms/base-lang/net-libs/nodejs/build.yaml
@@ -26,3 +26,7 @@ package_dir: /pkgdir/{{ .Values.name }}
 excludes:
 - ^/var/cache/portage/
 - ^/var/git/
+requires:
+  - name: macaroni-funtoo-race8
+    version: '>=0'
+    category: seed
