toolchain/base-net: Update rdeps

--- a/packages/toolchain/base-net/definition.yaml
+++ b/packages/toolchain/base-net/definition.yaml
@@ -126,6 +126,12 @@ requires:
   - name: dnsmasq
     category: net-dns
     version: '>=0'
+  - name: conntrack-tools
+    category: net-firewall
+    version: '>=0'
+  - name: ebtables
+    category: net-firewall
+    version: '>=0'
   - name: ipset
     category: net-firewall
     version: '>=0'
@@ -157,6 +163,15 @@ requires:
     category: net-libs
     version: '>=0'
   - name: libnetfilter_conntrack
+    category: net-libs
+    version: '>=0'
+  - name: libnetfilter_cthelper
+    category: net-libs
+    version: '>=0'
+  - name: libnetfilter_cttimeout
+    category: net-libs
+    version: '>=0'
+  - name: libnetfilter_queue
     category: net-libs
     version: '>=0'
   - name: libnfnetlink
@@ -193,6 +208,9 @@ requires:
     category: net-misc
     version: '>=0'
   - name: ntp
+    category: net-misc
+    version: '>=0'
+  - name: socat
     category: net-misc
     version: '>=0'
   - name: whois
