base-{lang,net}: Fix build order

--- a/packages/atoms/base-lang/dev-libs/xxhash/build.yaml
+++ b/packages/atoms/base-lang/dev-libs/xxhash/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race8
+- name: source-highlight
   version: '>=0'
-  category: seed
+  category: dev-util
