--- a/packages/atoms/base-net/app-text/asciidoc/build.yaml
+++ b/packages/atoms/base-net/app-text/asciidoc/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: ruby
+- name: rubygems
   version: '>=0'
-  category: dev-lang-3.1
+  category: dev-ruby
