base-fs: Update build order

--- a/packages/atoms/base-fs/sys-fs/cryptsetup/build.yaml
+++ b/packages/atoms/base-fs/sys-fs/cryptsetup/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: argon2
+- name: parted
   version: '>=0'
-  category: app-crypt
+  category: sys-block
