--- a/packages/atoms/base-fs/dev-libs/libbytesize/build.yaml
+++ b/packages/atoms/base-fs/dev-libs/libbytesize/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race8
+- name: argon2
   version: '>=0'
-  category: seed
+  category: app-crypt
