sys-libs/libblockdev: Bump v.2.22+1

--- a/packages/atoms/base-fs/sys-libs/libblockdev/build.yaml
+++ b/packages/atoms/base-fs/sys-libs/libblockdev/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: parted
+- name: cryptsetup
   version: '>=0'
-  category: sys-block
+  category: sys-fs
