--- a/packages/atoms/base-fs/sys-fs/fuse/build.yaml
+++ b/packages/atoms/base-fs/sys-fs/fuse/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race8
+- name: fuse
   version: '>=0'
-  category: seed
+  category: sys-fs-3
